- Add warning if the Proximity version doesn't match the template version - Some better error messages - Better predicate attribute referencing - Allow setting HSB values instead of just being plus or minus - Cache plugin jars